docs: remove auth for healthcheck
