# docs/site/openapi.json
@@ -3,7 +3,7 @@
 	"info": {
 		"title": "Memobase API",
 		"summary": "APIs for Memobase, a user memory system for LLM Apps",
-		"version": "0.0.31"
+		"version": "0.0.32"
 	},
 	"servers": [
 		{
@@ -50,7 +50,8 @@
 						"source": "// To use the Go SDK, install the package:\n// go get github.com/memodb-io/memobase/src/client/memobase-go@latest\n\nimport (\n    \"github.com/memodb-io/memobase/src/client/memobase-go/core\"\n)\n\nprojectURL := \"YOUR_PROJECT_URL\"\napiKey := \"YOUR_API_KEY\"\nclient, err := core.NewMemoBaseClient(projectURL, apiKey)\nif err != nil {\n    panic(err)\n}\n\nok := client.Ping()\nif !ok {\n    panic(\"Failed to connect to Memobase\")\n}\n",
 						"label": "Go"
 					}
-				]
+				],
+				"security": []
 			}
 		},
 		"/api/v1/project/profile_config": {
@@ -1253,11 +1254,11 @@
 						"required": false,
 						"schema": {
 							"type": "boolean",
-							"description": "Whether to require event summary in returned events",
+							"description": "Whether to return events with summaries",
 							"default": false,
 							"title": "Need Summary"
 						},
-						"description": "Whether to require event summary in returned events"
+						"description": "Whether to return events with summaries"
 					}
 				],
 				"responses": {
@@ -1285,7 +1286,7 @@
 				"x-code-samples": [
 					{
 						"lang": "Python",
-						"source": "# To use the Python SDK, install the package:\n# pip install memobase\n\nfrom memobase import Memobase\n\nclient = Memobase(project_url='PROJECT_URL', api_key='PROJECT_TOKEN')\n\nevents = u.event(topk=10, max_token_size=1000)\n",
+						"source": "# To use the Python SDK, install the package:\n# pip install memobase\n\nfrom memobase import Memobase\n\nclient = Memobase(project_url='PROJECT_URL', api_key='PROJECT_TOKEN')\nu = client.get_user(uid)\n\nevents = u.event(topk=10, max_token_size=1000, need_summary=True)\n",
 						"label": "Python"
 					},
 					{
@@ -1642,6 +1643,18 @@
 							"title": "Chats Str"
 						},
 						"description": "List of chats in OpenAI Message format, for example: [{\"role\": \"user\", \"content\": \"Hello\"}, {\"role\": \"assistant\", \"content\": \"Hi\"}]"
+					},
+					{
+						"name": "event_similarity_threshold",
+						"in": "query",
+						"required": false,
+						"schema": {
+							"type": "number",
+							"description": "Event similarity threshold of returned Context",
+							"default": 0.3,
+							"title": "Event Similarity Threshold"
+						},
+						"description": "Event similarity threshold of returned Context"
 					}
 				],
 				"responses": {
